Make sure blog post text is wrapped when necessary

--- a/themes/midonet/planet.css
+++ b/themes/midonet/planet.css
@@ -119,6 +119,7 @@ nav a:hover {
 /* MAIN */
 section.post-content * {
   max-width: 100%;
+  word-wrap: break-word;
 }
 main .face {
   float: right;
